[Gold V] Title: AC, Time: 1568 ms, Memory: 104280 KB -BaekjoonHub